--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>欢迎访问我的主页！>huan y>
+    <title>动态线条 + 居中天气预报</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         /* 动态线条背景：全屏底层固定 */
