--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
             font-size: 14px; 
             color: rgba(255,255,255,0.7);
         }
+        /* 标准爱心形状样式（新增） */
+        .heart {
+            width: 16px;
+            height: 16px;
+            position: fixed;
+            background: #f00;
+            transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            opacity: 1;
+            z-index: 9999; /* 确保爱心在最上层，不被遮挡 */
+        }
+        .heart:before,
+        .heart:after {
+            content: '';
+            width: 16px;
+            height: 16px;
+            background: inherit;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            position: absolute;
+        }
+        .heart:before {
+            top: -8px;
+            left: 0;
+        }
+        .heart:after {
+            top: 0;
+            left: -8px;
+        }
     </style>
 </head>
 <body>
@@ -218,6 +249,47 @@
 
         fetchWeather(citySelect.value);
         citySelect.addEventListener("change", () => fetchWeather(citySelect.value));
+    </script>
+
+    <!-- 彩色爱心点击动画代码（新增，整合到此处） -->
+    <script>
+        ! function(e, t, a) {
+            function r() {
+                for (var e = 0; e < s.length; e++) s[e].alpha <= 0 ? 
+                (t.body.removeChild(s[e].el), s.splice(e, 1)) : 
+                (s[e].y--, s[e].scale += .003, s[e].alpha -= .012,
+                s[e].el.style.cssText = "left:" + s[e].x + "px;top:" + s[e].y + "px;opacity:" + s[e].alpha + 
+                ";transform:scale(" + s[e].scale + "," + s[e].scale + ") rotate(45deg);background:" + s[e].color + ";z-index:9999;");
+                requestAnimationFrame(r)
+            }
+            function n() {
+                var t = "function" == typeof e.onclick && e.onclick;
+                e.onclick = function(e) {
+                    t && t(), o(e)
+                }
+            }
+            function o(e) {
+                var a = t.createElement("div");
+                a.className = "heart", 
+                s.push({
+                    el: a,
+                    x: e.clientX - 8,
+                    y: e.clientY - 8,
+                    scale: 1,
+                    alpha: 1,
+                    color: c()
+                }), 
+                t.body.appendChild(a)
+            }
+            function c() {
+                return "rgb(" + ~~(230 + 25 * Math.random()) + "," + ~~(100 + 155 * Math.random()) + "," + ~~(100 + 155 * Math.random()) + ")"
+            }
+            var s = [];
+            e.requestAnimationFrame = e.requestAnimationFrame || e.webkitRequestAnimationFrame || e.mozRequestAnimationFrame || e.oRequestAnimationFrame || e.msRequestAnimationFrame || function(e) {
+                setTimeout(e, 1e3 / 60)
+            };
+            n(), r()
+        }(window, document);
     </script>
 </body>
 </html>
