--- a/index.html
+++ b/index.html
@@ -21,41 +21,55 @@
             margin: 0;
             cursor: default; /* 消除文本选中光标，不影响点击 */
         }
-        /* 标题样式（可选，居中显示） */
-        h1 { margin-bottom: 25px; font-size: 28px; text-shadow: 0 0 8px rgba(0,0,0,0.5); }
-        /* 城市选择器：居中适配 */
-        .city-select-wrap { margin-bottom: 20px; }
-        label { font-size: 18px; margin-right: 10px; }
-        select { 
-            padding: 10px 8px; 
-            border-radius: 6px; 
-            border: none; 
-            font-size: 16px;
-            background: rgba(255,255,255,0.9);
-            color: #333;
-            cursor: pointer;
+        /* 居中标题样式 */
+        .main-title { 
+            font-size: 36px; 
+            text-shadow: 0 0 15px rgba(255,255,255,0.5); 
+            margin-bottom: 40px; 
+            text-align: center;
         }
-        /* 天气预报模块：居中悬浮 + 半透黑背景 */
-        #weather { 
+        /* 按钮容器：横向排列+间距 */
+        .btn-group { 
+            display: flex; 
+            gap: 25px; 
+            margin-bottom: 80px; 
+        }
+        /* 跳转按钮样式（贴合暗黑毛玻璃风格） */
+        .nav-btn { 
+            padding: 15px 30px; 
+            font-size: 18px; 
+            border: 1px solid rgba(255,255,255,0.3); 
+            border-radius: 12px; 
+            background: rgba(0,0,0,0.6); 
+            backdrop-filter: blur(8px); 
+            color: #fff; 
+            cursor: pointer; 
+            transition: all 0.3s ease; 
             display: flex; 
             align-items: center; 
-            gap: 20px; 
-            padding: 25px; 
-            border: 1px solid rgba(255,255,255,0.2); /* 淡白边框 */
-            border-radius: 12px;
-            background: rgba(0,0,0,0.6); /* 半透黑背景，不挡线条 */
-            backdrop-filter: blur(8px); /* 毛玻璃增强质感 */
-            max-width: 400px;
-            width: 100%;
+            gap: 10px; 
+            text-decoration: none; /* 清除链接下划线 */
         }
-        #weather img { width: 60px; height: 60px; }
-        .weather-text { font-size: 18px; line-height: 1.8; }
-        /* 版权信息：底部居中 */
+        .nav-btn:hover { 
+            background: rgba(0,0,0,0.8); 
+            transform: scale(1.05); 
+            box-shadow: 0 0 20px rgba(255,255,255,0.2); 
+        }
+        /* 施工提示：底部居中 */
+        .under-construction { 
+            position: fixed; 
+            bottom: 50px; /* 上移，给版权留空间 */
+            font-size: 16px; 
+            color: rgba(255,255,255,0.7); 
+            text-shadow: 0 0 5px rgba(0,0,0,0.5); 
+        }
+        /* 版权信息：最底部居中（保留原有样式） */
         .copyright { 
             position: fixed; 
             bottom: 20px; 
             font-size: 14px; 
             color: rgba(255,255,255,0.7);
+            text-shadow: 0 0 5px rgba(0,0,0,0.5); 
         }
         /* 缩小40%后的爱心样式（原16px→10px） */
         .heart {
@@ -118,38 +132,22 @@
 <body>
     <canvas id="c"></canvas>
 
-    <h1>实时天气预报</h1>
+    <!-- 居中主标题 -->
+    <h1 class="main-title">欢迎来到我的主页！</h1>
 
-    <!-- 城市选择 -->
-    <div class="city-select-wrap">
-        <label for="city-select">选择城市：</label>
-        <select id="city-select">
-            <option value="101010100">北京</option>
-            <option value="101020100">上海</option>
-            <option value="101280101">广州</option>
-            <option value="101210101">武汉</option>
-            <option value="101030100">天津</option>
-            <option value="101190101">香港</option>
-            <option value="101140101">西安</option>
-            <option value="101040100">重庆</option>
-            <option value="101230101">杭州</option>
-            <option value="101250101">成都</option>
-        </select>
+    <!-- 跳转按钮组 -->
+    <div class="btn-group">
+        <a href="https://ericoec.github.io/fireworks-show/" class="nav-btn" target="_self">🧨 [限时]新年烟花</a>
+        <a href="https://ericoec.github.io/weather/" class="nav-btn" target="_self">⛅️ 天气预报</a>
     </div>
 
-    <!-- 天气模块 -->
-    <div id="weather">
-        <img id="weather-icon" src="" alt="天气图标">
-        <div class="weather-text">
-            <p id="weather-city">城市: 加载中...</p>
-            <p id="weather-info">天气: 加载中...</p>
-            <p id="weather-temp">温度: 加载中...</p>
-        </div>
-    </div>
+    <!-- 底部施工提示 -->
+    <div class="under-construction">施工中🏗️ 尽情期待</div>
 
-    <div class="copyright">Copyright © 2025 晓楠瓜. All Rights Reserved.</div>
+    <!-- 版权署名（保留原有信息，放在最底部） -->
+    <div class="copyright">Copyright © 2025-2026 晓楠瓜. All Rights Reserved.</div>
 
-    <!-- 动态线条背景代码 -->
+    <!-- 动态线条背景代码（保留不变） -->
     <script>
         const c = document.getElementById('c');
         const ctx = c.getContext('2d');
@@ -241,43 +239,7 @@
         });
     </script>
 
-    <!-- 天气预报代码 -->
-    <script>
-        const API_HOST = 'devapi.qweather.com';
-        const API_KEY = '05beb2ec0f884c25b8084d6749f37a36';
-
-        const weatherCity = document.getElementById("weather-city");
-        const weatherInfo = document.getElementById("weather-info");
-        const weatherTemp = document.getElementById("weather-temp");
-        const weatherIcon = document.getElementById("weather-icon");
-        const citySelect = document.getElementById("city-select");
-
-        async function fetchWeather(locationId) {
-            try {
-                const url = `https://${API_HOST}/v7/weather/now?location=${locationId}&key=${API_KEY}&lang=zh`;
-                const res = await fetch(url);
-                const data = await res.json();
-                const now = data.now;
-                const cityName = citySelect.options[citySelect.selectedIndex].text;
-                weatherCity.textContent = `城市: ${cityName}`;
-                weatherInfo.textContent = `天气: ${now.text}`;
-                weatherTemp.textContent = `温度: ${now.temp}°C`;
-                weatherIcon.src = `https://cdn.qweather.com/icons/${now.icon}.png`;
-                weatherIcon.alt = now.text;
-            } catch (err) {
-                console.error(err);
-                weatherCity.textContent = "城市: 获取失败";
-                weatherInfo.textContent = "天气: 获取失败";
-                weatherTemp.textContent = "温度: 获取失败";
-                weatherIcon.src = "";
-            }
-        }
-
-        fetchWeather(citySelect.value);
-        citySelect.addEventListener("change", () => fetchWeather(citySelect.value));
-    </script>
-
-    <!-- 修复版：单次1个形状+滑动连贯的动画代码 -->
+    <!-- 爱心/星星动画代码（保留不变） -->
     <script>
         ! function(e, t, a) {
             let isDragging = false; // 滑动特效状态
